volexc/tests/ui/parse_unclosed_bracket.out
Error: found '}' expected ']'
   ╭─[ parse_unclosed_bracket.vol:4:1 ]
   │
 4 │ }
   │ ┬  
   │ ╰── Unexpected '}'
   │ 
   │ Note: Expected one of: ']'
───╯